--- a/public/app/game/templates/game.html
+++ b/public/app/game/templates/game.html
@@ -275,7 +275,7 @@
     </div>
 </div>
 
-<div class="app-button__fixed app-button__fixed--game app-button__fixed--color"
+<div class="app-button__fixed app-button__fixed--more app-button__fixed--game app-button__fixed--color"
      ng-class="{'is-active': showColors}"
      ng-hide="hideFixedButton"
      data-colors-game>
@@ -288,26 +288,16 @@
 </div>
 
 <div ng-hide="hideFixedButton"
-     ng-class="{'is-active': showMore}"
      class="app-button__fixed app-button__fixed--game app-button__fixed--action">
-    <button type="button"
-            ng-click="showMore = true"
-            class="app-button app-button--show mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
-        <i class="material-icons">add</i>
-    </button>
-    <button class="app-button mdl-button mdl-button--fab"
-            ng-hide="user.gid"
-            show-modal="#modal-create-game">
-        <i class="material-icons">games</i>
-    </button>
-    <button class="app-button mdl-button mdl-js-button mdl-button--fab"
+    <button class="app-button app-button--show mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored"
+            ng-hide="game.finish"
             ng-click="setSound();">
         <i class="material-icons">{{ sound ? 'volume_up' : 'volume_off'}}</i>
     </button>
-    <button type="button"
-            ng-click="showMore = false"
-            class="app-button app-button--hide mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
-        <i class="material-icons">clear</i>
+    <button class="app-button app-button--show mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored"
+            ng-hide="!game.finish"
+            show-modal="#modal-create-game">
+        <i class="material-icons">games</i>
     </button>
 </div>
 
