--- a/public/index.ejs
+++ b/public/index.ejs
@@ -202,7 +202,7 @@
                 </footer>
             </div>
 
-            <div class="app-button__fixed" 
+            <div class="app-button__fixed app-button__fixed--more" 
                  ng-hide="isGame"
                  ng-class="{'app-button__fixed--pagination': pages, 'is-active': showMore }">
                  <button show-button 
