--- a/public/app/home/templates/home.html
+++ b/public/app/home/templates/home.html
@@ -80,7 +80,7 @@
             </tbody>
         </table>
         <div ng-hide="createdGames.length" class="app-element__loading">
-            <div class="app-spinner app-spinner--small"></div>
+            <div class="app-spinner"></div>
         </div>
     </div>
 </div>
