--- a/public/app/components/templates/sortable.html
+++ b/public/app/components/templates/sortable.html
@@ -1,4 +1,4 @@
 <a class="app-table__sortable" href ng-click="sort()"
    ng-class="{'app-table__sortable--down': reverse, 'app-table__sortable--up': !reverse}">
-    <i class="material-icons">{{ icon }}</i>
+    <i class="app-icon material-icons">{{ icon }}</i>
 </a>
