--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1913,7 +1913,7 @@ a {
 }
 
 .app-button.app-button--color-default {
-  background-image: linear-gradient(to right, #607D8B 50%, #CFD8DC 50%);
+  background-image: linear-gradient(to right, #557896 50%, #CFD8DC 50%);
 }
 
 .app-button.app-button--color-pink {
