--- a/public/index.ejs
+++ b/public/index.ejs
@@ -128,7 +128,7 @@
                                href>
                                 <i class="app-icon material-icons"
                                    ng-class="{'app-badge mdl-badge mdl-badge--overlap': !!challenges.length}"
-                                   data-badge="{{ challenges.length }}">notifications</i>
+                                   data-badge="{{ challenges.length }}">games</i>
                             </a>
                             <a class="mdl-navigation__link" 
                                href
