--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1047,9 +1047,10 @@ a {
   padding: 12px;
   background-color: #eef5f9;
   border-bottom: 1px solid rgba(0,0,0,.12);
-  color: #446479;
-  font-size: 16px;
+  color: #757575;
   line-height: 20px;
+  text-transform: uppercase;
+  font-weight: 700;
 }
 
 .app-element__badge {
