fix color badge

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1058,7 +1058,7 @@ a {
   display: inline-block;
   top: -1px;
   padding: 0px 4px;
-  background-color: #795548;
+  background-color: #DB4437;
   color: #EEF5F9;
   text-align: center;
   font-size: 12px;
